--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,182 @@
-.App {
-  text-align: center;
+@font-face{
+  font-family: "indieFlower";
+  src: url("./IndieFlower-Regular.ttf");
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+body, html {
+  margin: 0;
+  color: black;
+  font-family: indieFlower;
+  background-color: #fff;
+  background-image:
+      linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
+      linear-gradient(#eee .1em, transparent .1em);
+  background-size: 100% 1.2em;
+  padding:0;
+} 
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.quiz {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 50px;
+}
+
+.content-centered {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.header {
+font-size: larger;
+min-width: 100%;
+-webkit-box-shadow: 0px 10px 13px -7px #000000, 1px 22px 20px -1px #000000; 
+box-shadow: 0px 10px 13px -7px #000000, 1px 22px 20px -1px #000000;
+}
+
+.Question {
+ padding-bottom: 1%;
+ font-size: 2rem;
+ color:blue;
+}
+
+.Options{
+  padding-top: 0.5%;
+  padding-bottom: 1%;
+  font-size: 1.2rem;
+}
+
+.option-container{
+  font-size: 1.5rem;
+  justify-content: space-evenly;  
+  flex-wrap: wrap;
+}
+
+.option {
+  padding:  1%;
+  border: 2px ridge transparent;
+  border-radius: 10px;
+  color: grey;
+  font-weight: bold;
+  display: inline-block;
+  flex-wrap: wrap;
+
+}
+
+.option input:checked {
+  display: inline-flex;
+  font-size: 2rem;
+  color: tomato;
+}
+
+#tick:after{
+  font-weight: bolder;
+  content : "	\2714"
+  
+}
+
+.option:hover {
+  cursor:  pointer;
+  border: 2px ridge tomato;
+  border-radius: 5px;
+  color: black;
+
+}
+
+.buttons-container {
+  margin: 0%;
+  padding: 2%;
+  justify-content: center;
+  box-sizing: content-box;
+}
+
+button{
+  border: none;
+  background-color: transparent;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 16px;
+  font-size: 1.5rem;
+  border: 2px ridge transparent;
+}
+
+button:hover {
+  cursor: pointer;
+  border: 2px ridge tomato;
+}
+
+button:disabled,
+button[disabled] {
+  background-color: transparent;
+}
+
+.score{
+  padding-top: 0.5%;
+  padding-bottom: 1%;
+  font-size: 1.5rem;
+  color: TOMATO;
+  font-weight: bolder;
+
+}
+
+.message{
+  padding-top: 0.5%;
+  padding-bottom: 1%;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+/* ***************************** Initial Quiz form  **********************************/
+
+.form-container{
+  min-height: 100%;
+  margin-top: 2%;
+}
+
+.quizForm{
+  display: flex;
+  flex-direction: column;
+  width:30rem;
+  background-color: rgba(0,0,0,0.7);
+  padding: 50px;
+  padding-bottom: 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+label {
+  font-size: 1.5rem;
+  margin: 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type=number], select {
+  font-size: 1.2rem;
+  margin-bottom: 30;
+  border-radius: 4px;
 }
+
+input[type=submit] {
+  font-size: 2rem;
+  max-width:50%;
+  margin-top: 40px;
+  border-radius: 4px;
+  background-color: transparent;
+  border-radius: 4px;
+  color: honeydew;
+  align-self: center;
+}
+
+@media all and (max-width : 500px) {
+   
+  input[type=submit] {
+      max-width:100%;
+  }
+
+}
+
+input[type=submit]:hover {
+border: 2px ridge tomato;
+cursor: pointer;
+} 
